--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<name>DecoHero-rest</name>
 	<properties>
 		<jersey.version>2.4.1</jersey.version>
+		<spring.version>3.2.5.RELEASE</spring.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencyManagement>
@@ -28,6 +29,19 @@
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet-core</artifactId>
 		</dependency>
+		
+		<dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-web</artifactId>
+          <version>${spring.version}</version>
+          <scope>compile</scope>
+        </dependency>
+        
+		<dependency>
+          <groupId>org.glassfish.jersey.ext</groupId>
+          <artifactId>jersey-spring3</artifactId>
+        </dependency>
+        
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
