--- a/DecoHero-service/pom.xml
+++ b/DecoHero-service/pom.xml
@@ -1,23 +1,18 @@
-<?xml version="1.0"?>
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.jso.deco</groupId>
-	<artifactId>DecoHero-rest</artifactId>
-	<version>1.0-SNAPSHOT</version>
+
+	<parent>
+		<groupId>com.jso.deco</groupId>
+		<artifactId>DecoHero-rest</artifactId>
+		<version>1.0-SNAPSHOT</version>
+		<relativePath>../</relativePath>
+	</parent>
+	<artifactId>DecoHero-service</artifactId>
 	<packaging>war</packaging>
-	<name>DecoHero-rest</name>
-	<properties>
-		<jersey.version>2.4.1</jersey.version>
-		<spring.version>3.2.5.RELEASE</spring.version>
-		<common.codec.version>1.8</common.codec.version>
-		<jackson.version>2.3.0</jackson.version>
-		<joda.version>2.3</joda.version>
-		<servlet.version>2.5</servlet.version>
-		<common.logging.version>1.1.1</common.logging.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
+	<name>DecoHero-service</name>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -30,6 +25,19 @@
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
+		<!-- DecoHero modules -->
+		<dependency>
+			<groupId>com.jso.deco</groupId>
+			<artifactId>DecoHero-api</artifactId>
+			<version>${version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.jso.deco</groupId>
+			<artifactId>DecoHero-controller</artifactId>
+			<version>${version}</version>
+		</dependency>
+	
 		<!-- Spring/Jersey -->
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
@@ -80,40 +88,5 @@
 			<version>${common.logging.version}</version>
 		</dependency>
 
-		<!-- Test -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.easytesting</groupId>
-			<artifactId>fest-assert</artifactId>
-			<version>1.4</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.8.4</version>
-		</dependency>
-
-
 	</dependencies>
-	<build>
-		<finalName>DecoHero-rest</finalName>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.5.1</version>
-				<inherited>true</inherited>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
