Add mongo spring lib for database POJO

--- a/DecoHero-api/pom.xml
+++ b/DecoHero-api/pom.xml
@@ -12,4 +12,11 @@
 	<packaging>jar</packaging>
 	<name>DecoHero-api</name>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			<version>${spring.mongodb.version}</version>
+		</dependency>
+	</dependencies>
 </project>
