--- a/DecoHero-service/pom.xml
+++ b/DecoHero-service/pom.xml
@@ -60,6 +60,12 @@
 			<version>${spring.version}</version>
 			<scope>compile</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 
 		<!-- j2ee -->
 		<dependency>
