--- a/DecoHero-service/src/main/webapp/WEB-INF/web.xml
+++ b/DecoHero-service/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.Application</param-name>
-            <param-value>com.jso.deco.config.DHResourceConfig</param-value>
+            <param-value>com.jso.deco.service.config.DHResourceConfig</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
