--- a/DecoHero-service/pom.xml
+++ b/DecoHero-service/pom.xml
@@ -31,13 +31,13 @@
 			<artifactId>DecoHero-api</artifactId>
 			<version>${version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.jso.deco</groupId>
 			<artifactId>DecoHero-controller</artifactId>
 			<version>${version}</version>
 		</dependency>
-	
+
 		<!-- Spring/Jersey -->
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
@@ -60,7 +60,7 @@
 			<version>${spring.version}</version>
 			<scope>compile</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
@@ -81,6 +81,13 @@
 			<artifactId>commons-codec</artifactId>
 			<version>${common.codec.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>${common.lang.version}</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>joda-time</groupId>
