--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<properties>
 		<jersey.version>2.4.1</jersey.version>
 		<spring.version>3.2.5.RELEASE</spring.version>
+		<common.lang.version>2.6</common.lang.version>
 		<common.codec.version>1.8</common.codec.version>
 		<jackson.version>2.3.0</jackson.version>
 		<joda.version>2.3</joda.version>
