Add MongoHQ db infos

--- a/DecoHero-data/src/main/resources/database.properties
+++ b/DecoHero-data/src/main/resources/database.properties
@@ -1,3 +1,13 @@
-mongo.host=localhost
-mongo.port=27017
-mongo.database=decohero
+mongo.host=linus.mongohq.com
+mongo.port=10092
+mongo.username=cloudbees
+mongo.password=13bf27fce41fdc6648a4d9e36a13d3fd
+
+mongo.database=gwV7FZi2gSJVLNTNIw8eg
+
+#mongo.host=localhost
+#mongo.port=27017
+#mongo.username=
+#mongo.password=
+
+#mongo.database=decohero
