--- a/DecoHero-controller/pom.xml
+++ b/DecoHero-controller/pom.xml
@@ -26,5 +26,12 @@
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
+		<!-- Utils -->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>${common.codec.version}</version>
+		</dependency>
 	</dependencies>
 </project>
