--- a/DecoHero-data/pom.xml
+++ b/DecoHero-data/pom.xml
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>com.jso.deco</groupId>
 			<artifactId>DecoHero-api</artifactId>
-			<version>${version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		
 		<!-- Spring -->
