--- a/DecoHero-service/pom.xml
+++ b/DecoHero-service/pom.xml
@@ -88,18 +88,17 @@
 			<version>${common.lang.version}</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>${joda.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>${common.logging.version}</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>commons-logging</groupId> -->
+<!-- 			<artifactId>commons-logging</artifactId> -->
+<!-- 			<version>${common.logging.version}</version> -->
+<!-- 		</dependency> -->
 
 	</dependencies>
 </project>
