--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,20 @@
 	<packaging>pom</packaging>
 	<name>DecoHero-rest</name>
 	<properties>
-		<jersey.version>2.4.1</jersey.version>
-		<spring.version>3.2.5.RELEASE</spring.version>
-		<common.lang.version>2.6</common.lang.version>
 		<common.codec.version>1.8</common.codec.version>
-		<jackson.version>2.3.0</jackson.version>
-		<joda.version>2.3</joda.version>
-		<servlet.version>2.5</servlet.version>
+		<common.lang.version>2.6</common.lang.version>
 		<common.logging.version>1.1.1</common.logging.version>
+		<jackson.version>2.3.0</jackson.version>
+		<jersey.version>2.4.1</jersey.version>
+		<joda.version>2.3</joda.version>
+		<logback.version>1.0.13</logback.version>
+		<servlet.version>2.5</servlet.version>
+		<slf4j.version>1.7.5</slf4j.version>
 		<spring.mongodb.version>1.3.2.RELEASE</spring.mongodb.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>3.2.5.RELEASE</spring.version>
+		
 		<jdk.version>1.7</jdk.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<modules>
@@ -30,6 +33,25 @@
 	</modules>
 
 	<dependencies>
+	<!-- Log -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
+		</dependency>
+		
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
