--- a/DecoHero-controller/src/main/resources/images.properties
+++ b/DecoHero-controller/src/main/resources/images.properties
@@ -1,5 +1,7 @@
 #local
-#avatar.location=/home/jsomsanith/DecoHero/avatar/
+avatar.location=/home/jsomsanith/DecoHero/avatar/
+project.img.location=/home/jsomsanith/DecoHero/project/
+project.img.location.tmp=/home/jsomsanith/DecoHero/project/tmp/
 
 #recette
-avatar.location=./avatar/
+#avatar.location=./avatar/
